business-skill-track/episode-generator_biz/0.12/references/business-interface.md
# 业务接口声明

本文件是分集规划师与工程侧之间的唯一字段合同。工程按这里声明的字段名称、类型和层级取值；`episode-output-schema.md`负责字段内容和一致性要求，本文件负责接口结构。

## 接口规则

- 初次生成读取`游戏企划`、`角色描述`、`场景描述`、`道具描述`四个正式上游字段。
- 顶层输出固定为`分集列表`，每项严格使用 Sheet3 定义的十一个一级字段。
- `互动节点`与`选择节点`是互斥身份：`分集列表`每项只能是承载完整剧情的互动节点记录；同项中的`选择节点`对象只封装播完本集后可能出现的选择信息，不能把当前分集记录再次标成选择节点。
- 角色、场景、道具只使用上游正式名称或已登记别名，不输出资产工程 ID。
- 用户要求源快照、用户意图合同、冲突解决记录、履约证据、情绪脊、拓扑哈希、路径状态、资产索引、首次出场证据、正文哈希、复检包、复检回执、门禁状态、错误摘要和缓存路径都属于 Skill 内部验证数据，不是业务输出字段，也不要求数据库维护。
- 修改、重做、评审或恢复所需的已有完整结果、修改要求和允许修改范围是调用期控制输入，不改变正式业务输出结构。

## Skill 输入字段

### 初次生成

| 字段 | 类型 | 必填 | 说明 |
|---|---|---|---|
| `游戏企划` | object | 是 | 来自大纲生成师；包含标题、目标、冲突、世界观、体量和结局。内部的`剧情节点总数建议`为可选软区间，缺失不阻塞调用。 |
| `角色描述` | list<object> | 是 | 正式角色资产；至少包含主角及剧情必需角色。 |
| `场景描述` | list<object> | 是 | 正式场景资产；上游明确无正式场景时允许为空列表。 |
| `道具描述` | list<object> | 是 | 正式道具资产；没有关键道具时允许为空列表。 |

### 修改已有分集

修改、重做、评审或恢复模式在四项上游字段之外读取：

| 字段 | 类型 | 必填 | 说明 |
|---|---|---|---|
| `已有分集结果` | object | 是 | 与本文件输出结构相同的完整当前结果，不接收局部片段作为基线。 |
| `修改要求` | string | 是 | 用户本轮要求。 |
| `允许修改范围` | object | 是 | 明确允许变化的分集编号及范围；纯台词修改使用`dialogue`范围。 |

## Skill 输出字段

```text
分集列表 list<object>
└─ 分集对象
   ├─ 分集编号 string
   ├─ 分集标题 string
   ├─ 分集数 integer
   ├─ 分集剧本 object
   │  ├─ 完整剧本 string
   │  └─ 单集梗概 string
   ├─ 剧本分析 object
   │  ├─ 本集冲突 string
   │  ├─ 前置节点编号列表 list<string>
   │  └─ 后续节点编号列表 list<string>
   ├─ 关联角色 list<string>
   ├─ 关联场景 list<string>
   ├─ 关联道具 list<string>
   ├─ 是否结局 boolean
   ├─ 选择节点 object
   │  ├─ 是否为选择节点 boolean
   │  ├─ 是否有选择问题 boolean
   │  ├─ 选择节点编号 string
   │  ├─ 选择问题 string
   │  └─ 选项列表 list<object>
   │     └─ 选项对象
   │        ├─ 选项编号 string | integer
   │        ├─ 选项文字 string
   │        └─ 目标互动节点编号 string
   └─ 互动节点 object
      ├─ 是否为互动节点 boolean
      ├─ 互动节点编号 string
      ├─ 后边是否接选择节点 boolean
      └─ 后续选择节点编号 string
```

## 输出约束

- `分集列表`必须非空，并来自同一份已冻结创作拓扑。
- `分集编号`和`互动节点编号`从`episode-001`开始连续编号并逐项相同。
- `分集数`必须为正整数，等于互动节点总数，并在全部分集对象中保持一致。
- 输出`分集数`是完成情绪脊与拓扑后，从上游`剧情节点总数建议`软区间内确定的一个具体值；缺少建议时也必须按游戏体量、真实分支与结局需求确定，不得阻塞。
- 上游节点建议只约束互动节点，不包含选择节点。
- 每个分集对象都且只对应一个互动节点；`互动节点.是否为互动节点`必须为真，`选择节点.是否为选择节点`必须为假。两个身份不得同时为真，互动节点承载完整剧情、梗概、资产和情绪脊坐标。
- 普通互动节点直接按`剧本分析.后续节点编号列表`连接下一互动节点；带选择的互动节点只在`互动节点`中声明后接自己的`choice-xxx`。
- 每个有效选择只在来源分集的`选择节点`对象中出现一次。由于当前记录仍是互动节点，`选择节点.是否为选择节点`保持为假；是否存在后续选择只由`选择节点.是否有选择问题`表达。选择按来源分集顺序连续编号，只承载问题、选项文字和目标互动节点，不含剧本、梗概、资产、情绪坐标或结局内容。
- 有选择时，`选择节点.是否有选择问题`与`互动节点.后边是否接选择节点`同时为真，`互动节点.后续选择节点编号`与`选择节点.选择节点编号`一致；无选择时二者为假、编号为`无`。
- 选择节点至少有两个指向不同互动节点的有效选项；选项目标必须与该分集`剧本分析.后续节点编号列表`完全一致。
- `分集列表`第一项和唯一入口必须是具有非空完整剧情的`episode-001`互动节点；任何选择节点不得排序在它之前或替代它。若第一集带选择，必须先完整播完第一集正文，之后才能显示选择。
- 创建、修改、重做和恢复都返回当前完整结果，不只返回变化片段。
- 任一强验证门禁失败时，不得返回可被工程当作完成结果的业务对象；只在运行时错误通道报告，不把错误或门禁字段混入正式输出。
- `分集列表`只能在全部门禁通过后一次性整组提交；生成、验证和修复期间不得逐节点写入页面。重做必须整组替换旧节点与边，禁止追加或合并中间拓扑。

## 持久化与展示边界

- `分集列表`是 Sheet3 定义的正式十一字段业务数据。每条记录的节点身份已由业务侧固定为互动节点；可选选择信息只解析一次，不得把该互动记录再转换成选择卡。
- 路线投影只能使用Skill内置确定性投影器。投影中的剧情节点数量必须等于`分集列表`长度；选择数量必须等于唯一有效选择数量；预计可视节点总数等于两者之和。任何带选择的剧情记录都必须先保留剧情卡，再在其后显示唯一选择卡。
- boolean字段保持JSON原生boolean并按boolean判断。禁止把`true/false`与`是/否`字符串比较或静默转换。
- 本合同是调用期接口，不要求为内部校验数据新增数据库字段；选择节点是否独立持久化由工程实现决定，但对外只有本合同这一份事实源。
- 业务输出中没有面向玩家的摘要字段，也没有内部验证结果。前端和玩家只消费公开投射，不展示内部 Reference、门禁、哈希、回执或缓存。
- 用户前后明确要求无法同时成立时，Skill 通过 AskUser 取得选择后才继续；冲突问题和解决记录不进入正式十一字段。
